Closed Bug 1092711 Opened 10 years ago Closed 10 years ago

Fix -Wunused-const-variable warning-as-error in non-unified dom/indexedDB

Categories

(Core :: Storage: IndexedDB, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
firefox36 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building in non-unified mode, clang reports the following warning (and treats it as an error because dom/indexedDB/moz.build has FAIL_ON_WARNINGS): dom/indexedDB/PermissionRequestBase.cpp:30:12: error: unused variable 'kPermissionResponseTopic' [-Werror,-Wunused-const-variable]
Attachment #8515576 - Flags: review?(Jan.Varga)
Attachment #8515576 - Flags: review?(Jan.Varga) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: