Bug 1092711 - Fix -Wunused-const-variable warning-as-error in non-unified dom/indexedDB. r=janv